test/yaml/testdata/output/ssl-passthrough/ssl-passthrough-wildcard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: nginx
  listeners:
  - hostname: '*.example.com'
    name: example-com-http
    port: 80
    protocol: HTTP
  - hostname: '*.example.com'
    name: example-com-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: null
        kind: null
        name: wildcard-tls-secret
  - hostname: '*.example.com'
    name: example-com-tls
    port: 443
    protocol: TLS
    tls:
      mode: Passthrough
status: {}
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: ssl-passthrough-wildcard-ingress-example-com
  namespace: namespace1
spec:
  hostnames:
  - '*.example.com'
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: wildcard-service
      port: 443
    name: rule-prefix-root
status:
  parents: null
